fix collapsed whitespace when rendering record (#430)
* fix collapsed whitespace when rendering record

* address comments

--- a/app/components/Records/records.scss
+++ b/app/components/Records/records.scss
@@ -264,3 +264,17 @@
     }
   }
 }
+
+.domain-detail-records {
+  min-height: 2.125rem !important;
+}
+
+.record {
+  &__type {
+    user-select: none;
+  }
+  &__value {
+    font-family: "Roboto Mono" !important;
+    white-space: pre !important;
+  }
+}
